Kubernetes/Coding/CodeServer/yamls/code-server-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: code-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
    app.kubernetes.io/name: code-server
  name: code-server
  namespace: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
        app.kubernetes.io/name: code-server
    spec:
      volumes:
      - name: code-server-data
        persistentVolumeClaim:
          claimName: code-server-pvc
      containers:
      - image: codercom/code-server:latest
        imagePullPolicy: Always
        name: code-server
        volumeMounts:
          - mountPath: /home/coder
            name: code-server-data
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-code-server-https-redirect
  namespace: code-server
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-code-server-security
  namespace: code-server
spec:
  headers:
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-code-server-websecure
  namespace: code-server 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`code-server.domain.com`)
      services:
        - name: code-server
          port: 8080
          serversTransport: traefik-code-server-transport
      middlewares:
        - name: traefik-code-server-security
  tls:
    secretName: code-server-domain-com
    options:
      name: traefik-code-server-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-code-server-web
  namespace: code-server
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`code-server.domain.com`)
      services:
        - name: code-server
          port: 8080 
      middlewares:
        - name: traefik-code-server-https-redirect
